# whatsit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.org  cmake_uninstall.cmake.in
.cache/clangd/index/: configmanager.cpp.1A7BEEDF4C7FAD0A.idx  configmanager.h.A5B0065F85F9F07E.idx  ipcmanager.cpp.ED36E869DF41132F.idx  ipcmanager.h.47C6D2A09D667884.idx  logger.cpp.C73E63275EA45C5B.idx  logger.h.E1296E22E7634F37.idx  main.cpp.6F49FDB0408A5B4C.idx  mainwindow.cpp.4441BC9F6DD30A98.idx  mainwindow.h.E7FA5CAF9572A310.idx  traymanager.cpp.81CB8FCED7BF43B8.idx  traymanager.h.3A48F4738F8D9442.idx  webenginehelper.cpp.E7B588317201B76C.idx  webenginehelper.h.98C3E0219D4C340C.idx
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
LICENSES/: Qt-NOTICE.txt
data/: whatsit.desktop  whatsit.notifyrc
src/: configmanager.cpp  configmanager.h  ipcmanager.cpp  ipcmanager.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  traymanager.cpp  traymanager.h  webenginehelper.cpp  webenginehelper.h
